1.0.2 - not released yet

Bug fixes:
- [#5755] Test failure in EventMapper test
- [#5751] Exception in ListView once a Registration exists
- [#5746] Fix crash in FE for invalid date record

Cleanup:
- [#5754] Improve unit test getFrontEndUserWithFrontEndUserReturnsFrontEndUserInstance


1.0.1 - released 2016-07-19

Bug fixes:
- Release with the Tests/ folder do keep the autoloader from crashing


1.0.0 - released 2016-07-19

Features:
- [#5706] Use new IconFactory for TYPO3 CMS >= 7.6
- [#5655] Add a composer.json and a ClassAliasMap file for autoloading
- [#5656] Automatic canceling/confirmation of events
- [#5682] Add variables for the e-mail subject
- [#5676] Add EventMapper::findForAutomaticStatusChange
- [#5674] Also mute the notification e-mails to the organizer
- [#5673] Add variables for the event name and date for the cancel/confirm e-mails
- [#5666] Configuration for the maximum number of seats in the registration form
- [#5662] Add an EventStateService
- [#5660] Add an EmailService
- [#5664] Per-event flag for muting the notification emails
- [#5651] Convert the cron job to a Scheduler task
- [#5650] Limit the number of seats in the registration drop-down
- [#5653] Add a configuration for PDF rendering of the manual
- [#5628] Add a RealURL auto configuration

Bug fixes:
- [#5729] Fix action links in the list of FE-edited events
- [#5724] Get the edit links in the BE module to work in 7.6
- [#5723] Fix the URL encode issue for 6.2 and 7.6 in the unit tests
- [#5722] Change language() to LanguageService()
- [#5720] Not all search widget options can be selected in the FlexForms
- [#5711] "Recursion" drop-down labels are empty in the flexforms in 6.2
- [#5511] Test failures in 7.6 for BackEnd/EventsListTest
- [#5687] Error 500 for CSV download in BE
- [#5638] Fix user functions in the TS setup and hooks
- [#5684] Cannot create new content element due to incorrect locallang path
- [#5670] Increase counter cache for registrations after registration